# ChakraVisualizer21

./: .replit  DEPLOYMENT.md  HOW_TO_BUILD_REAL_DMG.md  aura_photo.py  build-desktop.sh  chakra_visualization.py  chakra_visualization_3d.py  chakra_visualization_3d.py.backup  current_function.txt  diagnostic_analyzer.py  extract_pdf.py  function_header.txt  grv_camera.py  grv_session.json  main.py  organ_detail_visualization.py  organs_visualization.py  pyproject.toml  replit.md  replit.nix  sound_utils.py  styles.css  temp_function.py  utils.py
.streamlit/: config.toml  pages.toml
assets/: chakra_info.py
desktop-app/: README.md  build-script.js  create-releases.sh  loading.html  main.js  package.json  preload.js
pages/: 0_Home.py  1_GRV_Lab.py  chakra_energy_values.py  color_gradient_page.py  download_page.py  grv_page.py
releases/portable/: Kirlian_Platform_Launcher.py  README.md  diagnostic_analyzer.py  grv_camera.py  main.py  organ_detail_visualization.py  organs_visualization.py  start_kirlian_platform.bat  start_kirlian_platform.sh  utils.py
releases/portable/assets/: chakra_info.py
releases/portable/pages/: download_page.py  grv_page.py
