[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pypdf>=5.3.1",
    "streamlit>=1.43.1",
]
